--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bigboyortiz/edgecli",
+  "name": "@bigboyortiz/edge-cli",
   "version": "1.0.0",
   "description": "A copy of 'edgeci' - an Apigee Edge command line utility to export/import API proxies for continuous integration",
   "author": "lorenzo.milan.ortiz@gmail.com",
